first layout prototype

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -55,6 +55,18 @@
         "settings": {
           "bundleName": "com.brf.trackingprocessos.trackingprocessosfrontend.i18n.i18n"
         }
+      },
+      "ProcurementProcesses": {
+        "type": "sap.ui.model.json.JSONModel",
+        "settings": {},
+        "preload": true,
+        "uri": "model/tracking-mock.json"
+      },
+      "SLAs": {
+        "type": "sap.ui.model.json.JSONModel",
+        "settings": {},
+        "preload": true,
+        "uri": "model/tracking-sla-mock.json"
       }
     },
     "resources": {
