--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"start": "fiori run --open 'index.html'",
 		"start-local": "fiori run --config ./ui5-local.yaml --open 'index.html'",
 		"start-noflp": "fiori run --open 'index.html'",
-		"build": "ui5 build -a --clean-dest --include-task=generateManifestBundle generateCachebusterInfo --output public",
+		"build": "ui5 build -a --clean-dest --include-task=generateManifestBundle generateCachebusterInfo",
 		"deploy": "fiori verify",
 		"deploy-config": "fiori add deploy-config",
 		"unit-tests": "fiori run --open test/unit/unitTests.qunit.html",
